Added Bootstrap + Add Big Image + logo + Font + Social Login Button

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+body{
+    font-family: 'Nunito Sans', Courier, monospace;
+    background-color: #fff;
+}
+
 .bg-holder {
     position: absolute;
     width: 100%;
