add boxicon font + add divider + put some margin

--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ body{
     background-color: #fff;
 }
 
+.btn{
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+.btn i {
+    vertical-align: text-top;
+}
+
 .bg-holder {
     position: absolute;
     width: 100%;
@@ -14,4 +23,21 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.divider-content-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    background-color: #fff;
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: #999;
+}
+
+.divider{
+    margin: 2rem 0;
 }
